--- a/view_csv.html
+++ b/view_csv.html
@@ -74,44 +74,8 @@
             <pre class="csv-viewer__content_header">CSV File: Baptisms 001  </pre>
             <!-- CSV Content-->
             <pre class="csv-viewer__content">
-                "REG","SUB","PAR","CHAPMAN","COUNTY","COUNTRY","DISTRICT","EDITION","FOLIO","PAGE","ENTRY","DATE_TYPE","DATE1","DATE2""REG","SUB","PAR","CHAPMAN","COUNTY","COUNTRY","DISTRICT","EDITION","FOLIO","PAGE","ENTRY","DATE_TYPE","DATE1","DATE2"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","1","Baptism","1750-01-22","","22 Jan 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","2","Baptism","1750-01-27","","27 Jan 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","3","Baptism","1750-02-03","","3 Feb 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","4","Baptism","1750-02-10","","10 Feb 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","5","Baptism","1750-02-17","","17 Feb 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","6","Baptism","1750-02-24","","24 Feb 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","   1","7","Baptism","1750-03-03","","3 Mar 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","8","Baptism","1750-03-10","","10 Mar 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","9","Baptism","1750-03-17","","17 Mar 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","10","Baptism","1750-03-24","","24 Mar 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","11","Baptism","1750-03-31","","31 Mar 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","12","Baptism","1750-04-07","","7 Apr 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","13","Baptism","1750-04-14","","14 Apr 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","14","Baptism","1750-04-21","","21 Apr 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","15","Baptism","1750-04-28","","28 Apr 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","16","Baptism","1750-05-05","","5 May 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10",""1","17","Baptism","1750-05-12","","12 May 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","
-"REG","SUB","PAR","CHAPMAN","COUNTY","COUNTRY","DISTRICT","EDITION","FOLIO","PAGE","ENTRY","DATE_TYPE","DATE1","DATE2"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","1","Baptism","1750-01-22","","22 Jan 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","2","Baptism","1750-01-27","","27 Jan 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","3","Baptism","1750-02-03","","3 Feb 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","4","Baptism","1750-02-10","","10 Feb 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","5","Baptism","1750-02-17","","17 Feb 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","6","Baptism","1750-02-24","","24 Feb 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","   1","7","Baptism","1750-03-03","","3 Mar 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","8","Baptism","1750-03-10","","10 Mar 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","9","Baptism","1750-03-17","","17 Mar 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","10","Baptism","1750-03-24","","24 Mar 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","11","Baptism","1750-03-31","","31 Mar 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","12","Baptism","1750-04-07","","7 Apr 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","13","Baptism","1750-04-14","","14 Apr 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","14","Baptism","1750-04-21","","21 Apr 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","15","Baptism","1750-04-28","","28 Apr 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","1","16","Baptism","1750-05-05","","5 May 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10",""1","17","Baptism","1750-05-12","","12 May 1750"
-"STSAAMA7501224468","STSAAMA","AMAA","St Mary the Virgin, Amersham","Buckinghamshire","England","Amersham","1","10","
+                "REG","SUB","PAR","CHAPMAN","COUNTY","COUNTRY","DISTRICT","EDITION","FOLIO","PAGE","ENTRY","DATE_TYPE","DATE1","DATE2""REG","SUB","PAR","CHAPMAN",
+                "COUNTY","COUNTRY","DISTRICT","EDITION","FOLIO","PAGE","ENTRY","DATE_TYPE","DATE1","DATE2"
             </pre>  
          </div>
 
