--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
     <a class="block py-2" href="https://github.com/FreeUKGen/style-guide.git">Style Guide repository</a>
 
     <a href="button.html">Button</a>
-    <a href="input.html">Input</a>
-    <a href="nav.html">Nav</a>
-    <a href="image.html">Images</a>
-    <a href="login.html">Login</a>
-    <a href="view-images.html">View Images</a>
-    <a href="load-csv.html">Load CSV File</a>
+    <a class="ml-1" href="input.html">Input</a>
+    <a class="ml-1" href="nav.html">Nav</a>
+    <a class="ml-1" href="image.html">Images</a>
+    <a class="ml-1" href="login.html">Login</a>
+    <a class="ml-1" href="view-images.html">View Images</a>
+    <a class="ml-1" href="load-csv.html">Load CSV File</a>
+    <a class="ml-1" href="view_csv.html">View CSV File</a>
 
     <section class="table-container mt-2">
         <table>
