Initial table markup for column layout page.

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
     <a class="ml-1" href="nav.html">Nav</a>
     <a class="ml-1" href="image.html">Images</a>
     <a class="ml-1" href="login.html">Login</a>
-    <a class="ml-1" href="view-images.html">View Images</a>
+    <a class="ml-1" href="view_images.html">View Images</a>
     <a class="ml-1" href="load-csv.html">Load CSV File</a>
     <a class="ml-1" href="view_csv.html">View CSV File</a>
+    <a class="ml-1" href="col_layout.html">Column Layout</a>
 
     <section class="table-container mt-2">
         <table>
