Add upload status page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <a class="ml-1" href="view-images.html">View Images</a>
     <a class="ml-1" href="load-csv.html">Load CSV File</a>
     <a class="ml-1" href="view_csv.html">View CSV File</a>
+    <a class="ml-1" href="upload-status.html">View Upload Status</a>
 
     <section class="table-container mt-2">
         <table>
